[FIX] Remove override that was causing checkbox misalignment in horizontal forms (maybe unnecessary in later versions of Bootstrap).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@57707 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2974,9 +2974,6 @@ body.tiki.navbar-padding {
 .img-thumbnail.media-object {
   max-width: none;
 }
-.tiki .form-horizontal input[type="checkbox"] {
-  margin-top: .8em;
-}
 .tiki .form-horizontal .checkbox input[type="checkbox"] {
   margin-top: .4em;
 }
